[gd_scene load_steps=6 format=3 uid="uid://cq77mk1uk8t20"]

[ext_resource type="Script" path="res://game/src/WorldResources/Scripts/resource_item.gd" id="1_28ki4"]
[ext_resource type="Texture2D" uid="uid://c28djl1oqpbon" path="res://game/assets/environment/props/bulletGround.png" id="2_y4sao"]

[sub_resource type="CircleShape2D" id="CircleShape2D_pwv5j"]

[sub_resource type="Animation" id="Animation_o8jw3"]
resource_name = "Mine"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Icon:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [-0.785398, 0.0, 0.785398]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5wkx4"]
_data = {
"Mine": SubResource("Animation_o8jw3")
}

[node name="ResourceItem" type="Area2D"]
script = ExtResource("1_28ki4")
DetectionRadius = 3.345

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_pwv5j")

[node name="Icon" type="Sprite2D" parent="."]
rotation = -0.785398
scale = Vector2(0.359375, 0.34375)
texture = ExtResource("2_y4sao")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5wkx4")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
